# maaa_mioffset

./: .gitignore  LICENSE  conftest.py  dot-env-example.txt  hpccpy.sh  pyproject.toml  pyrightconfig.json  pytest.ini  readme.md  requirements.txt
.github/workflows/: publish.yml
data/: housing_types.csv  housing_types.tsv  oen_odor_control.csv  oen_odor_control.tsv  oen_storage.csv  oen_storage.tsv
doc/: api_documentation.md  introtext.html  response_schema.json
doc/notebooks/: fod_test.ipynb  h5_transform_testing.ipynb
fod/: dot-env-example.txt  fod3.py  fod_test.sh  h5_test.ipynb  narr_data.py  narr_data_transform.py  narr_data_transform.sh  readme.md  requirements.txt
fod/legacy/: fod_config.py  fod_config_orig.py
notebooks/: fod.ipynb  fod3_dev.ipynb  fod_test.ipynb  h5_transform_testing.ipynb
python/: aws.py  dot-env-example.txt  fod3.py  fod_config.py  fod_config_hpcc.py  fod_test.ipynb  fod_test.sh  h5_test.ipynb  narr_data_transform.py  narr_data_transform.sh  new_fod.py  readme.md  requirements.txt
scripts/: diff_legacy_outputs.sh  fod_test_run.sh  narr_data_transform.sh
src/mioffset/: __init__.py  aws.py  awsh5.py  fod3.py  mioffset.py  narr_data.py  narr_data_transform.py  readme.md
src/mioffset/legacy/: new_fod.py
tests/: test_aws.py  test_fod.py  test_grid_index.py  test_mioffset.py  test_narr_data.py  test_narr_data_hdf5.py  test_narr_data_json.py
tests/data/: narr_latlon.h5
tests/data/pc/: pc_232_131.json
tests/data/wd/: wd_232_131.json
tests/data/ws/: ws_232_131.json
